--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,9 +9,23 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="resources/icon.png" type="image/x-icon">
 </head>
+
 <body>
-    <header><h1 id="title">Paleta de Cores</h1></header>
     <div class="mouse"></div>
-    <script  src="script.js"></script>
+    <header>
+        <h1 id="title">Paleta de Cores</h1>
+    </header>
+    <main>
+        <article id="color-palette">
+            <div class="color" id="Black-color"></div>
+            <div class="color"></div>
+            <div class="color"></div>
+            <div class="color"></div>
+        </article>
+
+    </main>
+   
+    <script src="script.js"></script>
 </body>
+
 </html>
