--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <div class="color"></div>
             <div class="color"></div>
             <div class="color"></div>
+            <p id="button-random-color">Cores aleatórias</p>
         </article>
 
     </main>
