parte do requisito 5 pronto e começando o 6

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
             <div class="color"></div>
             <div class="color"></div>
             <div class="color"></div>
-            <p id="button-random-color">Cores aleatórias</p>
+            <p id="button-random-color">Cores aleatórias</p>            
         </article>
+        <section id="pixel-board"></section>
 
     </main>
    
