Finalmente consegui arrumar o requisito 5 e já havia feio até o 7

--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 </head>
 
 <body>
-    <div class="mouse"></div>
+    <div class="mouse selected"></div>
     <header>
         <h1 id="title">Paleta de Cores</h1>
     </header>
     <main>
         <article id="color-palette">
             <div class="color" id="Black-color"></div>
-            <div class="color"></div>
-            <div class="color"></div>
-            <div class="color"></div>
+            <div class="color" id='cor01'></div>
+            <div class="color" id='cor02'></div>
+            <div class="color" id='cor03'></div>
             <p id="button-random-color">Cores aleatórias</p>            
         </article>
         <section id="pixel-board"></section>
