Arrumando os códigos e alinhando com o lint

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="mouse selected"></div>
+    <div class="mouse selected" id="selected"></div>
     <header>
         <h1 id="title">Paleta de Cores</h1>
     </header>
