--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
             <div class="color" id='cor03'></div>
             <p id="button-random-color">Cores aleatórias</p>            
         </article>
-        <section id="pixel-board"></section>
-
+        <!-- <section id="pixel-board"></section> -->
     </main>
    
     <script src="script.js"></script>
