--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 </head>
 
 <body>
-    <div class="mouse selected" id="selected"></div>
+    <div class="mouse" ><div id="selected"></div></div>
     <header>
         <h1 id="title">Paleta de Cores</h1>
     </header>
     <main>
         <article id="color-palette">
-            <div class="color" id="Black-color"></div>
+            <div class="color selected" id="Black-color"></div>
             <div class="color" id='cor01'></div>
             <div class="color" id='cor02'></div>
             <div class="color" id='cor03'></div>
