tentando arrumar quando pinta

--- a/index.html
+++ b/index.html
@@ -15,15 +15,22 @@
     <header>
         <h1 id="title">Paleta de Cores</h1>
     </header>
-    <main>
+    <main id="main">
         <article id="color-palette">
             <div class="color selected" id="Black-color"></div>
             <div class="color" id='cor01'></div>
             <div class="color" id='cor02'></div>
-            <div class="color" id='cor03'></div>
-            <p id="button-random-color">Cores aleatórias</p>            
+            <div class="color" id='cor03'></div>            
+            <p id="button-random-color">Cores aleatórias</p>
+            <div class="bar">
+              <p id="clear-board">Limpar</p>
+              <p>Insira o tamanho da caixa: </p>
+              <input id="input" type="text" placeholder="Número inteiro. Ex.: 50">
+              <p>GOGOGOGO</p>
+            </div>
+                     
         </article>
-        <!-- <section id="pixel-board"></section> -->
+            <div id="pixel-board"></div>
     </main>
    
     <script src="script.js"></script>
