--- a/index.html
+++ b/index.html
@@ -1,39 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fairy Pixel Art</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="resources/icon.png" type="image/x-icon">
+    <title>Pixel Art</title>
 </head>
-
 <body>
-    <div class="mouse" ><div id="selected"></div></div>
     <header>
         <h1 id="title">Paleta de Cores</h1>
     </header>
-    <main id="main">
-        <article id="color-palette">
-            <div class="color selected" id="Black-color"></div>
-            <div class="color" id='cor01'></div>
-            <div class="color" id='cor02'></div>
-            <div class="color" id='cor03'></div>            
-            <p id="button-random-color">Cores aleatórias</p>
-            <div class="bar">
-              <p id="clear-board">Limpar</p>
-              <p>Insira o tamanho da caixa: </p>
-              <input id="input" type="text" placeholder="Número inteiro. Ex.: 50">
-              <p>GOGOGOGO</p>
-            </div>
-                     
-        </article>
-            <div id="pixel-board"></div>
-    </main>
-   
-    <script src="script.js"></script>
-</body>
+    <div class="container">
+        <section id="color-palette"></section>
+    </div>
+    <div id="header2"></div>
 
+
+    <script src="script.js"></script>    
+</body>
 </html>
