Melhoria nos códigos, aparencia do site, arrumação no css e tentativa dos requisitos bonus

--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Pixel Art</title>
+    <link rel="shortcut icon" href="resources/icon.png" type="image/x-icon">
 </head>
 <body>
+    <div class="mouse" ><div id="selected">_</div></div>
     <header>
         <h1 id="title">Paleta de Cores</h1>
     </header>
     <div class="container">
         <section id="color-palette"></section>
     </div>
-    <div id="header2"></div>
+    <div id="header2">
+    </div>
 
 
     <script src="script.js"></script>    
